--- a/style.css
+++ b/style.css
@@ -7,10 +7,13 @@
 
 html,body{
     height: 100%;
-    width: 100%;
     background: #fff;
 }
-
+.container{
+    max-width: 1400px;
+    margin: 0 auto;
+    padding: 42px 16px 28px 16px;
+}
 nav{
     padding: 10px 30px;
     display: flex;
@@ -76,12 +79,62 @@ main{
 display: flex;
 flex-wrap: wrap;
 justify-content: center;
+width: 100%;
 }
 article{
-    width: 80%;
-    height: 200px;
-    background-color: aqua;
+    width: 30%;
+    height: 500px;
+    background-color: white;
     display: flex;
-    border: #585858  1px solid;
-    margin: 10px;
+    margin: 30px 20px 0 20px;
+    flex-direction: column;
+    box-shadow: #585858 0px 0px 10px 1px;
+    border-radius: 5px;
+}
+article img{
+    width: 100%;
+    height: 200px;
+    border-radius: 5px;
+}
+p span{
+    color: rgb(156, 223, 57);
+}
+p{
+    color: gray;
+
+    margin: 10px 0 20px 0;
+}
+article a{
+   text-decoration: none;
+   color: black;
+   font-weight: 600;
+   margin: 30px 0 0 0;
+}
+.text-wrapper{
+    width: 90%;
+    height: 300px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+}
+article:hover{
+transform: scale(105%);
+transition: 0.5s;
+cursor: pointer;
+}
+@media (max-width:1100px){
+    article{
+        height: 550px;
+    }
+}
+@media (max-width:850px){
+   main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+   }
+   article{
+    width: 80%;
+   }
 }
